created landing page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -325,7 +325,7 @@ button {
 
 .landing {
     position: relative;
-    background: url('/img/bg.jpg') no-repeat center center/cover;
+    background: url('./img/bg.jpg') no-repeat center center/cover;
     height: 100vh;
   }
   .landing-inner {
